# TinTin

./: BACKEND_CHECKLIST.md  BACKEND_PROGRESS.md  package.json  pnpm-lock.yaml  tailwind.config.ts
app/: ClientAppLayout.tsx  globals.css  layout.tsx  page.tsx
backend/: README.md  jest.config.js  package-lock.json  package.json  setup.sh  tsconfig.json
backend/rust-solana/programs/tintin-finance/: Cargo.toml
backend/rust-solana/programs/tintin-finance/src/: lib.rs
components/: accounts-page.tsx  accounts-summary.tsx  advice-page.tsx  affiliate-page.tsx  alert-generator.tsx  alerts-display.tsx  alerts-dropdown.tsx  alerts-page.tsx  app-layout.tsx  auth-modal.tsx  auth-required.tsx  benchmarks-page.tsx  budget-bar-chart.tsx  budget-chart.tsx  budget-dashboard.tsx  budget-page.tsx  budget-progress.tsx  budget-summary.tsx  cash-flow-chart.tsx  cash-flow-page.tsx  category-breakdown-chart.tsx  category-breakdown.tsx  category-form.tsx  category-management-page.tsx  category-transactions-list.tsx  credit-page.tsx  crypto-asset-form.tsx  crypto-dashboard.tsx  crypto-wallet-form.tsx  dashboard-page.tsx  data-export-import.tsx  goals-page.tsx  goals-summary.tsx  header.tsx  help-page.tsx  income-expense-chart.tsx  investments-page.tsx  manage-recurring.tsx  notification-bell.tsx  notifications.tsx  (+19 more)
docs/: README.md
hooks/: use-ai-chat.ts  use-alerts-store.ts  use-auth.tsx  use-budget-store.ts  use-credit-store.ts  use-crypto-store.ts  use-mobile.tsx  use-recurring-store.ts  use-search-store.ts  use-sidebar-context.tsx
lib/: api-utils.ts  auth-utils.ts  schemas.ts  (+2 more)
(+142 files in other folders)
