[package]
name = "tintin-finance"
version = "0.1.0"
description = "TinTin Finance Solana Program for decentralized financial data"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tintin_finance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "~1.17.0"
spl-token = { version = "~4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "~2.2", features = ["no-entrypoint"] }
